Fix typo in basic_usage.ipynb

--- a/jupyter_usecase/basic_usage.ipynb
+++ b/jupyter_usecase/basic_usage.ipynb
@@ -11,7 +11,7 @@
     "from IPython.display import Image, display_png\n",
     "from rdkit.Chem.Draw import IPythonConsole\n",
     "\n",
-    "import metadisassembler"
+    "import metadisassembler as medi"
    ]
   },
   {
@@ -39,7 +39,7 @@
     }
    ],
    "source": [
-    "test1 = MetaDisassembler()\n",
+    "test1 = medi.MetaDisassembler()\n",
     "test1.input_query('C11815')\n",
     "test1.cpds[0].mol"
    ]
