Added some comments on basic_usage.ipynb
The explanation for output_matched_bb is still needed.

--- a/jupyter_usecase/basic_usage.ipynb
+++ b/jupyter_usecase/basic_usage.ipynb
@@ -4,7 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Metabolic Disassembler"
+    "# The Metabolic Disassembler\n",
+    "\n",
+    "#### import Metabolic Disassembler library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import Metabolic Disassembler library and name it as \"medi\"\n",
+    "\n",
+    "import metadisassembler as medi"
    ]
   },
   {
@@ -13,12 +26,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import other necessary libraries\n",
+    "\n",
     "import glob\n",
-    "\n",
     "from IPython.display import Image, display_png\n",
-    "from rdkit.Chem.Draw import IPythonConsole\n",
-    "\n",
-    "import metadisassembler as medi"
+    "from rdkit.Chem.Draw import IPythonConsole"
    ]
   },
   {
@@ -32,8 +44,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test1: [C05557 Isopenicillin N](https://www.genome.jp/dbget-bin/www_bget?C05557)\n",
-    "## Input a query by the KEGG compound identifier"
+    "## Test case 1: Isopenicillin N\n",
+    "\n",
+    "Isopenicillin N is given compound ID C05557 in KEGG, and can be retrieved via https://www.genome.jp/dbget-bin/www_bget?C05557\n",
+    "\n",
+    "#### Input a query by the KEGG compound ID"
    ]
   },
   {
@@ -54,11 +69,16 @@
     }
    ],
    "source": [
-    "# Create an instance and input a query molecule\n",
-    "\n",
-    "test1 = medi.MetaDisassembler()\n",
-    "test1.input_query('C05557')\n",
-    "test1.cpds[0].mol"
+    "test1 = medi.MetaDisassembler() # Create an instance of the Metabolic Disassembler\n",
+    "test1.input_query('C05557')     # Input Isopenicillin N by specifying its KEGG compound ID\n",
+    "test1.cpds[0].mol               # View the structure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Disassemble the query molecule"
    ]
   },
   {
@@ -85,10 +105,18 @@
     }
    ],
    "source": [
-    "# Disassemble the query molecule\n",
-    "# It takes about  sec.\n",
+    "# This takes several seconds.\n",
     "\n",
-    "test1.disassemble()"
+    "test1.disassemble() # Disassemble the query molecule"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Output files\n",
+    "\n",
+    "Output files is generated in the ./output/ directory"
    ]
   },
   {
@@ -124,9 +152,18 @@
     }
    ],
    "source": [
-    "# List output files\n",
+    "# List the output files\n",
     "\n",
     "sorted(glob.glob('./output/' + test1.name + '/*'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualize the disassembly\n",
+    "\n",
+    "The top disassembly result is visualized in \"0.png\"."
    ]
   },
   {
@@ -1231,7 +1268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
