Modify variable name and function name in usage

--- a/jupyter_usecase/basic_usage.ipynb
+++ b/jupyter_usecase/basic_usage.ipynb
@@ -191,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bb_info = test1.output_matched_bb(result_id=0)"
+    "bu_info = test1.output_matched_bu(result_id=0)"
    ]
   },
   {
@@ -203,7 +203,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C00956_01', 'C01251_04']\n"
      ]
     },
@@ -222,17 +222,17 @@
    "source": [
     "n = 0\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### If you want to get the information of this building block, please access [KEGG COMPOUND database](https://www.genome.jp/kegg/compound/).\n",
+    "### If you want to get the information of this biosynthetic unit, please access [KEGG COMPOUND database](https://www.genome.jp/kegg/compound/).\n",
     "  \n",
     "C00956_01 → C00956  \n",
     "https://www.genome.jp/dbget-bin/www_bget?cpd:C00956 ★  \n",
@@ -250,7 +250,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C00183_02']\n"
      ]
     },
@@ -269,10 +269,10 @@
    "source": [
     "n = 1\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
@@ -292,7 +292,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C00097_06']\n"
      ]
     },
@@ -311,10 +311,10 @@
    "source": [
     "n = 2\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
@@ -472,7 +472,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bb_info = test2.output_matched_bb(result_id=0)"
+    "bu_info = test2.output_matched_bu(result_id=0)"
    ]
   },
   {
@@ -484,7 +484,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C00062_01', 'C00077']\n"
      ]
     },
@@ -503,10 +503,10 @@
    "source": [
     "n = 0\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
@@ -526,7 +526,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C00109_04', 'C00118_05', 'C00546_01']\n"
      ]
     },
@@ -545,10 +545,10 @@
    "source": [
     "n = 1\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
@@ -569,7 +569,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['O']\n"
      ]
     },
@@ -588,10 +588,10 @@
    "source": [
     "n = 2\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
@@ -739,7 +739,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bb_info = test3.output_matched_bb(result_id=0)"
+    "bu_info = test3.output_matched_bu(result_id=0)"
    ]
   },
   {
@@ -751,7 +751,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C00029_04', 'C00031_05']\n"
      ]
     },
@@ -770,10 +770,10 @@
    "source": [
     "n = 0\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
@@ -793,7 +793,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C00223_01', 'C00811_01']\n"
      ]
     },
@@ -812,10 +812,10 @@
    "source": [
     "n = 2\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
@@ -835,7 +835,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C00223_07']\n"
      ]
     },
@@ -854,10 +854,10 @@
    "source": [
     "n = 3\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
@@ -878,7 +878,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C00083_03']\n"
      ]
     },
@@ -897,10 +897,10 @@
    "source": [
     "n = 4\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
@@ -1057,7 +1057,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bb_info = test4.output_matched_bb(result_id=2)"
+    "bu_info = test4.output_matched_bu(result_id=2)"
    ]
   },
   {
@@ -1069,7 +1069,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C00078_01', 'C00398']\n"
      ]
     },
@@ -1088,10 +1088,10 @@
    "source": [
     "n = 0\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
@@ -1111,7 +1111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C16521_05']\n"
      ]
     },
@@ -1130,10 +1130,10 @@
    "source": [
     "n = 1\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
@@ -1152,7 +1152,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C16521_04']\n"
      ]
     },
@@ -1171,10 +1171,10 @@
    "source": [
     "n = 2\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
@@ -1195,7 +1195,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C00022_01', 'C00024_01', 'C00083_04', 'C00084']\n"
      ]
     },
@@ -1214,10 +1214,10 @@
    "source": [
     "n = 3\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
