--- a/jupyter_usecase/basic_usage_in_colab.ipynb
+++ b/jupyter_usecase/basic_usage_in_colab.ipynb
@@ -185,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bb_info = test1.output_matched_bb(result_id=0)"
+    "bu_info = test1.output_matched_bu(result_id=0)"
    ]
   },
   {
@@ -197,7 +197,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C00956_01', 'C01251_04']\n"
      ]
     },
@@ -216,17 +216,17 @@
    "source": [
     "n = 0\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### If you want to get the information of this building block, please access [KEGG COMPOUND database](https://www.genome.jp/kegg/compound/).\n",
+    "### If you want to get the information of this biosynthetic unit, please access [KEGG COMPOUND database](https://www.genome.jp/kegg/compound/).\n",
     "  \n",
     "C00956_01 → C00956  \n",
     "https://www.genome.jp/dbget-bin/www_bget?cpd:C00956 ★  \n",
@@ -244,7 +244,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C00183_02']\n"
      ]
     },
@@ -263,10 +263,10 @@
    "source": [
     "n = 1\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
@@ -286,7 +286,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C00097_06']\n"
      ]
     },
@@ -305,10 +305,10 @@
    "source": [
     "n = 2\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
@@ -466,7 +466,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bb_info = test2.output_matched_bb(result_id=0)"
+    "bu_info = test2.output_matched_bu(result_id=0)"
    ]
   },
   {
@@ -478,7 +478,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C00062_01', 'C00077']\n"
      ]
     },
@@ -497,10 +497,10 @@
    "source": [
     "n = 0\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
@@ -520,7 +520,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C00109_04', 'C00118_05', 'C00546_01']\n"
      ]
     },
@@ -539,10 +539,10 @@
    "source": [
     "n = 1\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
@@ -563,7 +563,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['O']\n"
      ]
     },
@@ -582,10 +582,10 @@
    "source": [
     "n = 2\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
@@ -733,7 +733,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bb_info = test3.output_matched_bb(result_id=0)"
+    "bu_info = test3.output_matched_bu(result_id=0)"
    ]
   },
   {
@@ -745,7 +745,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C00029_04', 'C00031_05']\n"
      ]
     },
@@ -764,10 +764,10 @@
    "source": [
     "n = 0\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
@@ -787,7 +787,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C00223_01', 'C00811_01']\n"
      ]
     },
@@ -806,10 +806,10 @@
    "source": [
     "n = 2\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
@@ -829,7 +829,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C00223_07']\n"
      ]
     },
@@ -848,10 +848,10 @@
    "source": [
     "n = 3\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
@@ -872,7 +872,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C00083_03']\n"
      ]
     },
@@ -891,10 +891,10 @@
    "source": [
     "n = 4\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
@@ -1051,7 +1051,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bb_info = test4.output_matched_bb(result_id=2)"
+    "bu_info = test4.output_matched_bu(result_id=2)"
    ]
   },
   {
@@ -1063,7 +1063,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C00078_01', 'C00398']\n"
      ]
     },
@@ -1082,10 +1082,10 @@
    "source": [
     "n = 0\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
@@ -1105,7 +1105,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C16521_05']\n"
      ]
     },
@@ -1124,10 +1124,10 @@
    "source": [
     "n = 1\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
@@ -1146,7 +1146,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C16521_04']\n"
      ]
     },
@@ -1165,10 +1165,10 @@
    "source": [
     "n = 2\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
@@ -1189,7 +1189,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Block IDs:\n",
+      "Biosynthetic Unit IDs:\n",
       "['C00022_01', 'C00024_01', 'C00083_04', 'C00084']\n"
      ]
     },
@@ -1208,10 +1208,10 @@
    "source": [
     "n = 3\n",
     "\n",
-    "print('Building Block IDs:')\n",
-    "print(bb_info[n]['bb_id'])\n",
+    "print('Biosynthetic Unit IDs:')\n",
+    "print(bu_info[n]['bu_id'])\n",
     "\n",
-    "bb_info[n]['mol']"
+    "bu_info[n]['mol']"
    ]
   },
   {
