Modify codes in basic_usage_in_colab.ipynb

--- a/jupyter_usecase/basic_usage_in_colab.ipynb
+++ b/jupyter_usecase/basic_usage_in_colab.ipynb
@@ -35,7 +35,7 @@
     "!yes | pip install metadisassembler\n",
     "\n",
     "import sys\n",
-    "sys.path.append('/usr/local/lib/python3.6/site-packages')"
+    "sys.path.append('/usr/local/lib/python3.7/site-packages')"
    ]
   },
   {
@@ -117,7 +117,7 @@
    ],
    "source": [
     "# Disassemble the query molecule\n",
-    "# It takes about  sec.\n",
+    "# It takes about 30 sec.\n",
     "\n",
     "test1.disassemble()"
    ]
